animating the drone

--- a/index.css
+++ b/index.css
@@ -1,4 +1,6 @@
-*,*::before,*::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 a {
@@ -12,10 +14,11 @@ ul {
 img {
   width: 100%;
 }
-html, body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Bebas Neue';
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Bebas Neue";
 }
 .menu-btn {
   cursor: pointer;
@@ -32,13 +35,13 @@ html, body {
   z-index: -1;
 }
 .light-streaks {
-  background: #B2DD9E url('assets/streaks.jpg');
+  background: #b2dd9e url("assets/streaks.jpg");
   background-blend-mode: screen;
   background-size: cover;
   height: 100vh;
 }
 .blue-col {
-  background: #7988BE;
+  background: #7988be;
 }
 .container {
   margin: 0 1em;
@@ -49,12 +52,12 @@ nav {
 }
 .logo {
   background: #000;
-  padding: .2em .4em;
+  padding: 0.2em 0.4em;
   color: white;
   font-size: 1.8rem;
 }
 .logo span {
-  color: #6889FF;
+  color: #6889ff;
 }
 ul {
   display: none;
@@ -71,7 +74,7 @@ h1 {
 }
 .content p {
   font-size: 1.125rem;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   line-height: 141.6%;
 }
 .drone-container {
@@ -79,11 +82,26 @@ h1 {
   width: 65%;
   margin: 5em auto;
 }
-.blur,.drone {
+.blur,
+.drone {
   position: absolute;
   left: 0;
 }
 .blur {
   top: 1em;
-  opacity: .5;
+  opacity: 0.3;
+  animation: pulse 2s alternate-reverse infinite;
+}
+.drone {
+  animation: hover 2s alternate-reverse infinite;
+}
+@keyframes hover {
+  from {
+    transform: translateY(-30px);
+  }
+}
+@keyframes pulse {
+  from {
+    opacity: 0;
+  }
 }
