--- a/index.css
+++ b/index.css
@@ -51,6 +51,7 @@ nav {
   justify-content: space-between;
 }
 .logo {
+  display: inline-block;
   background: #000;
   padding: 0.2em 0.4em;
   color: white;
@@ -59,8 +60,31 @@ nav {
 .logo span {
   color: #6889ff;
 }
-ul {
-  display: none;
+nav ul {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  background: #363B4E;
+  width: 66%;
+  z-index: 2;
+  transform: translateX(100%);
+  transition: transform .3s;
+}
+nav ul li a {
+  display: block;
+  padding: .4em 1.5em;
+  color: white;
+  font-size: 1.5rem;
+  text-align: right;
+}
+.exit-btn {
+  text-align: right;
+}
+.exit-btn img {
+  cursor: pointer;
+  width: 2em;
+  margin: 2em;
 }
 .content {
   text-align: center;
