--- a/index.css
+++ b/index.css
@@ -129,3 +129,41 @@ h1 {
     opacity: 0;
   }
 }
+/* Section 1 */
+.quote {
+  position: relative;
+  width: 90%;
+  background: #303853;
+  color: white;
+  margin-left: auto;
+  padding: 4em 2em;
+  height: 75vh;
+}
+.quote::before {
+  content: '';
+  position: absolute;
+  background: url('assets/stadium.jpg');
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: .17;
+}
+blockquote {
+  margin: 0 0 2em 0;
+  font-size: 1.5rem;
+}
+cite {
+  font-size: 1.125rem;
+  position: relative;
+  padding-left: 1.5em;
+}
+cite::before {
+  content: '';
+  position: absolute;
+  background: white;
+  width: 1em;
+  border: 1px solid white;
+  top: 50%;
+  left: 0;
+}
