--- a/index.css
+++ b/index.css
@@ -235,7 +235,7 @@ h3 {
 label {
   display: block;
   font-size: 1.2rem;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 input {
   width: 100%;
@@ -245,7 +245,7 @@ input {
 }
 button {
   width: 100%;
-  padding:.8em;
+  padding: 0.8em;
   background: #000;
   color: white;
   font-size: 1.3rem;
@@ -258,13 +258,39 @@ button {
   width: 50%;
 }
 .other-info ul li {
-  padding: .5em;
-  border-bottom: 1px solid rgba(0,0,0,0.1);
-  font-family: 'Montserrat';
-  font-size: .9rem;
-  border-radius: .2em;
+  padding: 0.5em;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  font-family: "Montserrat";
+  font-size: 0.9rem;
+  border-radius: 0.2em;
 }
-.other-info ul li a{
-  color: #000;;
+.other-info ul li a {
+  color: #000;
 }
-
+@media only screen and (min-width: 900px) {
+  html {
+    font-size: 20px;
+  }
+  .top-bg-container {
+    width: 80%;
+    grid-template-columns: 60% auto;
+  }
+  .container {
+    width: 80%;
+    margin: 0 auto;
+  }
+  .content {
+    display: flex;
+    text-align: left;
+    padding: 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  h1 {
+    font-size: 5rem;
+    width: 80%;
+  }
+  .type p {
+    width: 80%;
+  }
+}
